# SatSim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_and_run.sh  input.json  input_2.json  input_3.json  input_4.json  input_5.json  input_6.json  input_7.json  input_8.json  input_9.json  sim_parameters.json  sim_parameters_example.json  simulation_setup.cpp  test_coverage.sh  test_coverage_summary.json
.github/workflows/: cmake-single-platform.yml  cmake_gtest_v2.yml
example_input_files/: input_10.json  input_11.json  input_12.json  input_2.json  input_7.json
example_project/: .gitignore  CMakeLists.txt  sim_parameters_example.json  sim_profiling.cpp  simulation_setup.cpp
example_project/example_satellite_input_files/: arg_of_periapsis_calibration_input.json  arg_of_periapsis_test_input.json  circular_orbit_raising_test_input.json  input_13.json  input_8.json  input_9.json
example_satellite_input_files/: arg_of_periapsis_calibration_input.json  circular_orbit_lowering_test_input.json  input_3.json
include/: PhasedArrayGroundStation.h  Satellite.h  utils.h
src/: PhasedArrayGroundStation.cpp  Satellite.cpp  orbits_core.cpp  simulation_setup.cpp  utils.cpp
tests/: PhasedArrayGroundStation_tests.cpp  Satellite_tests.cpp  attitude_test_input_1.json  attitude_tests.cpp  circular_orbit_test_1_input.json  circular_orbit_test_2_input.json  circular_orbit_tests.cpp  elliptical_orbit_test_1.json  elliptical_orbit_test_2.json  elliptical_orbit_test_3.json  elliptical_orbit_test_4.json  elliptical_orbit_tests.cpp  files_to_format.txt  misc_tests.cpp  nearly_zero_inclination_test.json  no_RAAN.json  no_arg_of_periapsis.json  no_eccentricity.json  no_inclination.json  no_mass.json  no_name.json  no_semimajor_axis.json  no_true_anomaly.json  sim_parameters_baseline.json  test_coverage_detailed.PhasedArrayGroundStation.cpp.b1467fc67cdaa758f7764df5452c5918.html  test_coverage_detailed.PhasedArrayGroundStation.h.5b54056581927049d160ff3354b9e6f1.html  test_coverage_detailed.Satellite.cpp.bef08eb3aaec087d7cd23d21b2ecdb00.html  test_coverage_detailed.Satellite.h.016907876294210b00a2d880adf10425.html  test_coverage_detailed.functions.html  test_coverage_detailed.html  test_coverage_detailed.utils.cpp.4d3039dff574b788948119de402ca8d9.html  test_coverage_detailed.utils.h.0924fa377d356c0f9a6a386ccdf5fa6d.html  test_coverage_summary.json  utils_tests.cpp  zero_inclination_test.json
